# bookmark-manager

./: Cargo.toml  Readme.md
resources/: template.html
src/: icon.rs  lib.rs  main.rs
