[package]
name = "bookmark-manager"
version = "0.1.0"
authors = ["Daniel Bowman <dan@danbowtell.co.uk>"]

[lib]
name = "rbmlib"
path = "src/lib.rs"

[[bin]]
name = "rbm"
path = "src/main.rs"

[dependencies]
time = "0.1"
rust-crypto = "0.2.35"
clap = "2.29.0"
hyper = "0.11.9"
hyper-tls = "0.1.2"
futures = "0.1"
tokio-core = "0.1"
html5ever = "*"
select = "*"