[package]
name = "bookmark-manager"
version = "0.1.0"
authors = ["Daniel Bowman <dan@danbowtell.co.uk>"]

[lib]
name = "rbmlib"
path = "src/lib.rs"

[[bin]]
name = "rbm"
path = "src/main.rs"

[dependencies]
time = "0.1"
rust-crypto = "0.2.35"
clap = "2.29.0"
select = "*"
reqwest = "*"
url = "*"
colored = "*"
chan = "*"
serde_json = "1.0"
