[package]
name = "bookmark-manager"
version = "0.1.0"
authors = ["Daniel Bowman <dan@danbowtell.co.uk>"]

[lib]
name = "rbmlib"
path = "src/lib.rs"

[[bin]]
name = "rbm"
path = "src/main.rs"

[dependencies]
time = "0.1"
rust-crypto = "0.2"
clap = "2.32"
select = "0.4.2"
reqwest = "0.9.10"
url = "1.7"
colored = "1.7"
chan = "0.1.23"
serde_json = "1.0"

